# ninshiki_interfaces

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-and-test.yml  build-debian-nightly.yml  build-debian-stable.yml
msg/: ColorSetting.msg  Contour.msg  DetectedObject.msg  DetectedObjects.msg  Point.msg  YoloDetectedObject.msg  YoloDetectedObjects.msg
proto/: ninshiki.proto
srv/: GetColorSetting.srv  SaveColorSetting.srv  SetColorSetting.srv
